--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.2.0",
     "react": "^19.2.0",
